log : application layer에 log 작성